<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardFragment"

    android:background="@color/ghost_white">


    <androidx.cardview.widget.CardView
        android:id="@+id/dashboard_card_view_module_0"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardElevation="12dp"
        app:cardCornerRadius="15dp"

        app:cardBackgroundColor="@color/metallic_violet"
        android:outlineAmbientShadowColor="@color/metallic_violet"
        android:outlineSpotShadowColor="@color/metallic_violet"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"

        android:clickable="false"
        android:focusable="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dashboard_constraint_layout_module_0"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/card_layout_background"

            android:layout_marginBottom="6dp"
            android:layout_marginEnd="4dp">

            <TextView
                android:id="@+id/dashboard_string_view_module_0"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:text="@string/dashboard_string_module_0"
                style="@style/dashboard_string_style_module_name"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>

            <TextView
                android:id="@+id/dashboard_string_view_module_0_description"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dashboard_string_description_module_0"
                style="@style/dashboard_string_style_description_module_0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_string_view_module_0"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_progress_bar_module_0"

                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp">
            </TextView>
            <ProgressBar
                android:id="@+id/dashboard_progress_bar_module_0"

                android:layout_width="0dp"
                android:layout_height="6dp"

                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/dashboard_progress_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dashboard_string_view_module_0_progress_complete"

                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp">
            </ProgressBar>
            <ImageButton
                android:id="@+id/dashboard_image_module_0_button_start"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/dashboard_start_button"
                android:background="@null"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">
            </ImageButton>
            <TextView
                android:id="@+id/dashboard_string_view_module_0_progress_complete"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dashboard_string_percent_complete"
                style="@style/dashboard_string_style_progress_complete"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_image_module_0_button_start"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="invisible"

                android:layout_marginEnd="10dp">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/dashboard_card_view_module_1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardElevation="12dp"
        app:cardCornerRadius="15dp"

        app:cardBackgroundColor="@color/metallic_violet"
        android:outlineAmbientShadowColor="@color/metallic_violet"
        android:outlineSpotShadowColor="@color/metallic_violet"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_card_view_module_0"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="50dp"

        android:clickable="false"
        android:focusable="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dashboard_constraint_layout_module_1"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/card_layout_background"

            android:layout_marginBottom="6dp"
            android:layout_marginEnd="4dp">

            <TextView
                android:id="@+id/dashboard_string_view_module_1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:text="@string/dashboard_string_module_1"
                style="@style/dashboard_string_style_module_name"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>
            <TextView
                android:id="@+id/dashboard_string_view_module_1_description"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dashboard_string_description_module_0"
                style="@style/dashboard_string_style_description_module_0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_string_view_module_1"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_progress_bar_module_1"

                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp">
            </TextView>
            <ProgressBar
                android:id="@+id/dashboard_progress_bar_module_1"

                android:layout_width="0dp"
                android:layout_height="6dp"

                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/dashboard_progress_bar"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dashboard_string_view_module_1_progress_complete"

                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp">
            </ProgressBar>
            <ImageButton
                android:id="@+id/dashboard_image_module_1_button_start"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/dashboard_start_button"
                android:background="@null"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">
            </ImageButton>
            <TextView
                android:id="@+id/dashboard_string_view_module_1_progress_complete"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dashboard_string_percent_complete"
                style="@style/dashboard_string_style_progress_complete"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_image_module_1_button_start"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="invisible"

                android:layout_marginEnd="10dp">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/dashboard_card_view_module_2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardElevation="12dp"
        app:cardCornerRadius="15dp"

        app:cardBackgroundColor="@color/metallic_violet"
        android:outlineAmbientShadowColor="@color/metallic_violet"
        android:outlineSpotShadowColor="@color/metallic_violet"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_card_view_module_1"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="50dp"
        android:alpha="0.5"

        android:clickable="false"
        android:focusable="false">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dashboard_constraint_layout_module_2"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/card_layout_background"

            android:layout_marginBottom="6dp"
            android:layout_marginEnd="4dp">
            <TextView
                android:id="@+id/dashboard_string_view_module_2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:text="@string/dashboard_string_module_2"
                style="@style/dashboard_string_style_module_name"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>
            <TextView
                android:id="@+id/dashboard_string_view_module_2_description"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dashboard_string_description_module_0"
                style="@style/dashboard_string_style_description_module_0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_string_view_module_2"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_progress_bar_module_2"

                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp">
            </TextView>
            <ProgressBar
                android:id="@+id/dashboard_progress_bar_module_2"

                android:layout_width="0dp"
                android:layout_height="6dp"

                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/dashboard_progress_bar"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dashboard_string_view_module_2_progress_complete"

                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp">
            </ProgressBar>
            <ImageButton
                android:id="@+id/dashboard_image_module_2_button_start"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/dashboard_start_button"
                android:background="@null"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">
            </ImageButton>
            <TextView
                android:id="@+id/dashboard_string_view_module_2_progress_complete"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dashboard_string_percent_complete"
                style="@style/dashboard_string_style_progress_complete"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_image_module_2_button_start"
                app:layout_constraintBottom_toBottomOf="parent"

                android:visibility="invisible"
                android:layout_marginEnd="10dp">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/dashboard_card_view_module_3"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardElevation="12dp"
        app:cardCornerRadius="15dp"

        app:cardBackgroundColor="@color/metallic_violet"
        android:outlineAmbientShadowColor="@color/metallic_violet"
        android:outlineSpotShadowColor="@color/metallic_violet"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_card_view_module_2"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="50dp"
        android:alpha="0.5"

        android:clickable="false"
        android:focusable="false">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dashboard_constraint_layout_module_3"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/card_layout_background"

            android:layout_marginBottom="6dp"
            android:layout_marginEnd="4dp">
            <TextView
                android:id="@+id/dashboard_string_view_module_3"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:text="@string/dashboard_string_module_3"
                style="@style/dashboard_string_style_module_name"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>
            <TextView
                android:id="@+id/dashboard_string_view_module_3_description"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dashboard_string_description_module_0"
                style="@style/dashboard_string_style_description_module_0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_string_view_module_3"
                app:layout_constraintBottom_toTopOf="@+id/dashboard_progress_bar_module_3"

                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp">
            </TextView>
            <ProgressBar
                android:id="@+id/dashboard_progress_bar_module_3"

                android:layout_width="0dp"
                android:layout_height="6dp"

                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/dashboard_progress_bar"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dashboard_string_view_module_3_progress_complete"

                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp">
            </ProgressBar>
            <ImageButton
                android:id="@+id/dashboard_image_module_3_button_start"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/dashboard_start_button"
                android:background="@null"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">
            </ImageButton>
            <TextView
                android:id="@+id/dashboard_string_view_module_3_progress_complete"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dashboard_string_percent_complete"
                style="@style/dashboard_string_style_progress_complete"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_image_module_3_button_start"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="invisible"

                android:layout_marginEnd="10dp">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>